--- a/src/assets/scss/lbd/_cards.scss
+++ b/src/assets/scss/lbd/_cards.scss
@@ -6,7 +6,7 @@
   .title {
     text-align: justify;
     display: -webkit-box !important;
-    -webkit-line-clamp: 1;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
   }
@@ -77,7 +77,7 @@
   }
 
   .card-title {
-    margin: $none;
+    padding: 1rem;
     color: $black-color;
     font-weight: $font-weight-light;
   }
