--- a/src/assets/scss/lbd/_partial-nucleo-icons.scss
+++ b/src/assets/scss/lbd/_partial-nucleo-icons.scss
@@ -270,305 +270,4 @@ License - nucleoapp.com/license/
     content: "\ea19";
 }
 
-.nc-camera-20::before {
-    content: "\ea1a";
-}
-
-.nc-caps-small::before {
-    content: "\ea1b";
-}
-
-.nc-cart-simple::before {
-    content: "\ea1c";
-}
-
-.nc-cctv::before {
-    content: "\ea1d";
-}
-
-.nc-chart-bar-32::before {
-    content: "\ea1e";
-}
-
-.nc-chart-pie-35::before {
-    content: "\ea1f";
-}
-
-.nc-chart-pie-36::before {
-    content: "\ea20";
-}
-
-.nc-chart::before {
-    content: "\ea21";
-}
-
-.nc-chat-round::before {
-    content: "\ea22";
-}
-
-.nc-check-2::before {
-    content: "\ea23";
-}
-
-.nc-circle-09::before {
-    content: "\ea24";
-}
-
-.nc-circle::before {
-    content: "\ea25";
-}
-
-.nc-cloud-download-93::before {
-    content: "\ea26";
-}
-
-.nc-cloud-upload-94::before {
-    content: "\ea27";
-}
-
-.nc-compass-05::before {
-    content: "\ea28";
-}
-
-.nc-controller-modern::before {
-    content: "\ea29";
-}
-
-.nc-credit-card::before {
-    content: "\ea2a";
-}
-
-.nc-delivery-fast::before {
-    content: "\ea2b";
-}
-
-.nc-email-83::before {
-    content: "\ea2c";
-}
-
-.nc-email-85::before {
-    content: "\ea2d";
-}
-
-.nc-explore-2::before {
-    content: "\ea2e";
-}
-
-.nc-fav-remove::before {
-    content: "\ea2f";
-}
-
-.nc-favourite-28::before {
-    content: "\ea30";
-}
-
-.nc-globe-2::before {
-    content: "\ea31";
-}
-
-.nc-grid-45::before {
-    content: "\ea32";
-}
-
-.nc-headphones-2::before {
-    content: "\ea33";
-}
-
-.nc-html5::before {
-    content: "\ea34";
-}
-
-.nc-istanbul::before {
-    content: "\ea35";
-}
-
-.nc-key-25::before {
-    content: "\ea36";
-}
-
-.nc-layers-3::before {
-    content: "\ea37";
-}
-
-.nc-light-3::before {
-    content: "\ea38";
-}
-
-.nc-lock-circle-open::before {
-    content: "\ea39";
-}
-
-.nc-map-big::before {
-    content: "\ea3a";
-}
-
-.nc-mobile::before {
-    content: "\ea3c";
-}
-
-.nc-money-coins::before {
-    content: "\ea3b";
-}
-
-.nc-note-03::before {
-    content: "\ea3d";
-}
-
-.nc-notes::before {
-    content: "\ea3e";
-}
-
-.nc-notification-70::before {
-    content: "\ea3f";
-}
-
-.nc-palette::before {
-    content: "\ea40";
-}
-
-.nc-paper-2::before {
-    content: "\ea41";
-}
-
-.nc-pin-3::before {
-    content: "\ea42";
-}
-
-.nc-planet::before {
-    content: "\ea43";
-}
-
-.nc-preferences-circle-rotate::before {
-    content: "\ea44";
-}
-
-.nc-puzzle-10::before {
-    content: "\ea45";
-}
-
-.nc-quote::before {
-    content: "\ea46";
-}
-
-.nc-refresh-02::before {
-    content: "\ea47";
-}
-
-.nc-ruler-pencil::before {
-    content: "\ea48";
-}
-
-.nc-satisfied::before {
-    content: "\ea49";
-}
-
-.nc-scissors::before {
-    content: "\ea4a";
-}
-
-.nc-send::before {
-    content: "\ea4b";
-}
-
-.nc-settings-90::before {
-    content: "\ea4c";
-}
-
-.nc-settings-gear-64::before {
-    content: "\ea4d";
-}
-
-.nc-settings-tool-66::before {
-    content: "\ea4e";
-}
-
-.nc-simple-add::before {
-    content: "\ea4f";
-}
-
-.nc-simple-delete::before {
-    content: "\ea50";
-}
-
-.nc-simple-remove::before {
-    content: "\ea51";
-}
-
-.nc-single-02::before {
-    content: "\ea52";
-}
-
-.nc-single-copy-04::before {
-    content: "\ea53";
-}
-
-.nc-spaceship::before {
-    content: "\ea54";
-}
-
-.nc-square-pin::before {
-    content: "\ea55";
-}
-
-.nc-stre-down::before {
-    content: "\ea56";
-}
-
-.nc-stre-left::before {
-    content: "\ea57";
-}
-
-.nc-stre-right::before {
-    content: "\ea58";
-}
-
-.nc-stre-up::before {
-    content: "\ea59";
-}
-
-.nc-sun-fog-29::before {
-    content: "\ea5a";
-}
-
-.nc-support-17::before {
-    content: "\ea5b";
-}
-
-.nc-tablet-2::before {
-    content: "\ea5c";
-}
-
-.nc-tag-content::before {
-    content: "\ea5d";
-}
-
-.nc-tap-01::before {
-    content: "\ea5e";
-}
-
-.nc-time-alarm::before {
-    content: "\ea5f";
-}
-
-.nc-tv-2::before {
-    content: "\ea60";
-}
-
-.nc-umbrella-13::before {
-    content: "\ea61";
-}
-
-.nc-vector::before {
-    content: "\ea62";
-}
-
-.nc-watch-time::before {
-    content: "\ea63";
-}
-
-.nc-zoom-split::before {
-    content: "\ea64";
-}
-
-
 /* all icon font classes list here */
